syntax = "proto3";
package ru.okibiteam.production_flow_service;

option java_multiple_files = true;

service GreetingService {
  rpc greeting(HelloRequest) returns(stream HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string text = 1;
}
